Fix search box over text
If header items are too long `#search-form-wrap` would over text.
It should be hidden when it wasn't be triggered/shown.

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -89,6 +89,7 @@
     content: "\f002"
 
 #search-form-wrap
+  display: none
   position: absolute
   top: 10px
   width: 150px
@@ -97,6 +98,7 @@
   opacity: 0
   transition: 0.2s ease-out
   &.on
+    display: block
     opacity: 1
     right: 55px
   @media (max-width:767px)
